# url_shortener

./: .env.github  .gitignore  README.md  SCALABILITY.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: conftest.py  main.py
src/apps/urls/api/: __init__.py
src/apps/urls/api/v1/: shortener.py
src/apps/urls/models/: __init__.py  shortener.py
src/apps/urls/schema/: __init__.py  shortener.py
src/apps/urls/tests/: api_test.py
src/core/: database.py  middlewares.py  models.py  schema.py  settings.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 821a1471b44d_.py
